[gd_scene load_steps=3 format=3 uid="uid://bfcvyx5l85uc1"]

[ext_resource type="Script" uid="uid://thvgffmewuow" path="res://scripts/menu/menu.gd" id="1_upctu"]
[ext_resource type="Theme" uid="uid://b8bdf4l66bp3o" path="res://assets/ui_theme.tres" id="1_xdvgc"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upctu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xdvgc")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Painted Metal Aging Shader"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DemoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Demo scenes"
horizontal_alignment = 1

[node name="DemoButtons" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ShipyardButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/DemoButtons"]
layout_mode = 2
text = "Shipyard"

[node name="SingleObjectsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/DemoButtons"]
layout_mode = 2
text = "Single objects
"

[node name="ContextButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/DemoButtons"]
layout_mode = 2
text = "Context (Requires Godot editor)"

[node name="VertexButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/DemoButtons"]
layout_mode = 2
disabled = true
text = "Vertex painting (Only in the Godot editor)"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProfilingLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Profiling"
horizontal_alignment = 1

[node name="ProfilingButtons" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProfilingRootButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ProfilingButtons"]
layout_mode = 2
text = "Shader profiling"

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TestingLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Testing"
horizontal_alignment = 1

[node name="TestingButtons" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ShaderTestingButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TestingButtons"]
layout_mode = 2
text = "Shader testing"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/DemoButtons/ShipyardButton" to="." method="set_docks_demo_scene"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/DemoButtons/SingleObjectsButton" to="." method="set_single_objects_demo_scene"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/DemoButtons/ContextButton" to="." method="set_context_demo_scene"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ProfilingButtons/ProfilingRootButton" to="." method="set_profiling_root_scene"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TestingButtons/ShaderTestingButton" to="." method="set_shader_testing_scene"]
